translated into catalan language

--- a/pythonClient/Game.pot
+++ b/pythonClient/Game.pot
@@ -4,30 +4,31 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
-msgid   ""
-msgstr  "Project-Id-Version: PACKAGE VERSION\n"
-        "Report-Msgid-Bugs-To: \n"
-        "POT-Creation-Date: 2017-11-26 11:27+0100\n"
-        "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-        "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-        "Language-Team: LANGUAGE <LL@li.org>\n"
-        "Language: \n"
-        "MIME-Version: 1.0\n"
-        "Content-Type: text/plain; charset=CHARSET\n"
-        "Content-Transfer-Encoding: 8bit\n"
+msgid ""
+msgstr ""
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2017-11-26 12:26+0100\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Transfer-Encoding: 8bit\n"
+
+#: Game.py:19
+msgid "This is the rock, paper, scissors game."
+msgstr ""
+
+#: Game.py:20
+msgid "The server must be open if you want to play."
+msgstr ""
 
 #: Game.py:21
-msgid   "This is the rock, paper, scissors game."
-msgstr  ""
+msgid "Just type the option that you want and have fun :)"
+msgstr ""
 
-#: Game.py:22
-msgid   "The server must be open if you want to play."
-msgstr  ""
-
-#: Game.py:23
-msgid   "Just type the option that you want and have fun :)"
-msgstr  ""
-
-#: Game.py:29
-msgid   "The result is: "
-msgstr  ""
+#: Game.py:27
+msgid "The result is: "
+msgstr ""
