--- a/pythonClient/ca.po
+++ b/pythonClient/ca.po
@@ -14,9 +14,25 @@ msgstr ""
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: RockPaperScissors.py:27
 msgid "Enter one option (Rock, Paper, or Scissors):"
-msgstr ""
+msgstr "Entra una opció (Pedra, Paper o Tisores):"
+
+#: Game.py:21
+msgid "This is the rock, paper, scissors game."
+msgstr "Aquest el joc del Pedra, Paper o Tisores"
+
+#: Game.py:22
+msgid "The server must be open if you want to play."
+msgstr "Si vols jugar, necessites obrir el servidor primer."
+
+#: Game.py:23
+msgid "Just type the option that you want and have fun :)"
+msgstr "Escriu la opció que prefereixis i juga :)"
+
+#: Game.py:29
+msgid "The result is: "
+msgstr "El resultat és: "
